# ai_video_detector

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  GUIDE.md  README.md
backend/: .env.example  bot.py  config.py  main.py  models.py  pyproject.toml  rate_limiter.py  research.py  run_local.py
backend/research/gradient_prefilter/: classifier.py  features.py  model.joblib  prefilter.py  spike.py
backend/services/: audio_extractor.py  cleanup.py  detector.py  downloader.py  frame_extractor.py
evaluation/: .gitignore  CLAUDE.md  eval_harness.py  plot_results.py  program.md  pyproject.toml  results.jsonl  test_detector.py  test_questions.md
